//////////////////////////////////////////////////////////////////////////////
// WARNING: This code is machine generated. Manual changes will be overridden.

syntax = "proto3";

package octaneapi;

option optimize_for = CODE_SIZE;

import "common.proto";

 // GRPC proto definitions for 'ApiGaussianSplatCloudNode' class from 'apigaussiansplatting.h'
message ApiGaussianSplatCloudNode
{
    // Request packet corresponding to '[in] parameters in ApiGaussianSplatCloudNode::create'
    message createRequest
    {
        // Graph that will own the new ApiGaussianSplatCloudNode.
        ObjectRef ownerGraph = 1;
    }

    // Response packet corresponding to '[out] parameters in 'ApiGaussianSplatCloudNode::create'
    message createResponse
    {
        //     Pointer to the created node or NULL if creation failed.
        ObjectRef result = 1;
    }

    // Request packet corresponding to '[in] parameters in ApiGaussianSplatCloudNode::obtain'
    message obtainRequest
    {
        // The node to obtain API for.
        ObjectRef node = 1;
    }

    // Response packet corresponding to '[out] parameters in 'ApiGaussianSplatCloudNode::obtain'
    message obtainResponse
    {
        //     The ApiGaussianSplatCloudNode object pointer if node type is NT_GEO_GAUSSIAN_SPLAT.
        ObjectRef result = 1;
    }

    // Request packet corresponding to '[in] parameters in ApiGaussianSplatCloudNode::setAttributesFromPly'
    message setAttributesFromPlyRequest
    {
        // ID of the object on which to call the method
        ObjectRef objectPtr = 1;
        // The number of points in the Gaussian splat cloud. If 0, the Gaussian splat
        uint32 numberOfPoints = 2;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT x = 3;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT y = 4;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT z = 5;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT opacity = 6;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT scale0 = 7;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT scale1 = 8;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT scale2 = 9;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT rot0 = 10;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT rot1 = 11;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT rot2 = 12;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT rot3 = 13;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT dc0 = 14;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT dc1 = 15;
        // The pointers to the corresponding PLY Gaussian splat attribute buffers.
        FloatArrayT dc2 = 16;
        // The number of elements in restAttributePointers buffer. If more than 45 provided, the
        uint32 numberOfRestAttributes = 17;
        // The buffer that contains pointers to the extra spherical harmonics data buffers.
        repeated FloatArrayT restAttributePointers = 18;
        // TRUE to re-evaluate the node, FALSE otherwise.
        bool evaluate = 19;
    }

    // Response packet corresponding to '[out] parameters in 'ApiGaussianSplatCloudNode::setAttributesFromPly'
    message setAttributesFromPlyResponse
    {
        //     TRUE if attributes were set successfully, FALSE otherwise
        bool result = 1;
    }

}


// GRPC interface definition for class 'ApiGaussianSplatCloudNode' from 'apigaussiansplatting.h'
service ApiGaussianSplatCloudNodeService
{
    /// Creates a new node of the NT_GEO_GAUSSIAN_SPLAT type
    rpc create(ApiGaussianSplatCloudNode.createRequest) returns (ApiGaussianSplatCloudNode.createResponse);
    /// Returns ApiGaussianSplatCloudNode interface for the ApiNode of NT_GEO_GAUSSIAN_SPLAT type
    /// 
    /// 
    rpc obtain(ApiGaussianSplatCloudNode.obtainRequest) returns (ApiGaussianSplatCloudNode.obtainResponse);
    /// Writes the Gaussian splat PLY attribute arrays into the node attributes
    rpc setAttributesFromPly(ApiGaussianSplatCloudNode.setAttributesFromPlyRequest) returns (ApiGaussianSplatCloudNode.setAttributesFromPlyResponse);
}
